# BuildingSync-asset-extractor

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
buildingsync_asset_extractor/: converter.py  cts_main.py  eletric_fuel_types.py  errors.py  formatters.py  main.py  processor.py  types.py
buildingsync_asset_extractor/config/: asset_definitions.json  asset_definitions_old.json
buildingsync_asset_extractor/cts/: CTS Comprehensive Evaluation Upload Template_20240312_021125.xlsx  __init__.py  classes.py  cts.py  cts_map.md  energy_and_water_conservation_measures.py  measure_type_to_CTS_field.py  measure_type_to_cts_field.py  parsers.py
buildingsync_asset_extractor/lighting_processing/: building_occ_class_to_building_type.py  building_space_type_to_lpd.py  building_type_to_lpd.py  lighting_processing.py  section_occ_class_to_section_type.py
buildingsync_asset_extractor/schemas/: asset_definitions_schema.json  extracted_assets_schema.json
buildingsync_preimporter/: console.py  main.py  processor.py
buildingsync_preimporter/config/: asset_definitions.json
tests/: test_buildingsync_asset_extractor.py  test_buildingsync_preimporter.py  test_formatters.py
tests/cts/: test_cts.py
tests/files/: Office-3.xml  PrimarySchool-1.xml  PrimarySchool-2.xml  completetest.xml  test_asset_defs.json  testfile.xml  testfile2.xml
tests/lighting_processing/: test_lighting_processing.py
