[tool.poetry]
name = "buildingsync-asset-extractor"
version = "0.1.14"
description = "BuildingSync Asset Extractor (BAE)"
authors = ["Katherine Fleming <katherine.fleming@nrel.gov>"]
license = "BSD4"

readme = "README.md"

homepage = "https://buildingsync.net"
repository = "https://github.com/BuildingSync/BuildingSync-asset-extractor"
documentation = "https://github.com/BuildingSync/BuildingSync-asset-extractor"
keywords = ["BuildingSync", "Building Data Exchange"]

[tool.poetry.dependencies]
python = "^3.9"
lxml = "4.9.1"
importlib-resources = "^5.7.0"

[tool.poetry.dev-dependencies]
pytest = "7.1.2"
pytest-cov = "3.0.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = "True"
disallow_untyped_defs = "True"
