[tool.poetry]
name = "buildingsync-asset-extractor"
version = "0.2.1"
description = "BuildingSync Asset Extractor (BAE)"
authors = [
	"Katherine Fleming <katherine.fleming@nrel.gov>",
	"Hannah Eslinger <hannah.eslinger@nrel.gov>"
]
license = "BSD4"

readme = "README.md"

homepage = "https://buildingsync.net"
repository = "https://github.com/BuildingSync/BuildingSync-asset-extractor"
documentation = "https://github.com/BuildingSync/BuildingSync-asset-extractor"
keywords = ["BuildingSync", "Building Data Exchange"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
lxml = "^5.3.0"
importlib-resources = "^5.13.0"
styleframe = "^4.2"
pandas = "^2.2.3"

[tool.poetry.dev-dependencies]
mypy = "^1.11.2"
pre-commit = "^3.8.0"
pytest = "7.1.2"
pytest-cov = "3.0.0"
ruff = "^0.6.7"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = "True"
disallow_untyped_defs = "True"
