[tool.poetry]
name = "buildingsync-asset-extractor"
version = "0.2.2"
description = "BuildingSync Asset Extractor (BAE)"
authors = [
	"Katherine Fleming <katherine.fleming@nrel.gov>",
	"Hannah Eslinger <hannah.eslinger@nrel.gov>"
]
license = "BSD4"

readme = ["README.md", "LICENSE"]

homepage = "https://buildingsync.net"
repository = "https://github.com/BuildingSync/BuildingSync-asset-extractor"
documentation = "https://github.com/BuildingSync/BuildingSync-asset-extractor"
keywords = ["BuildingSync", "Building Data Exchange"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

[tool.poetry.dependencies]
python = ">=3.9, <3.14"
importlib-resources = "^6.0.0"
lxml = "^5.0.0"
pandas = "^2.2.0"
styleframe = "^4.2"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=3.8.0, <5.0"
pytest = "^8.0.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
